# ChangeLog for sci-mathematics/pari
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/ChangeLog,v 1.61 2008/05/14 17:13:39 grozin Exp $

  15 May 2008; Andrey Grozin <grozin@gentoo.org> pari-2.3.3.ebuild:
  Set VARTEXFONTS (bug #221921)

  13 May 2008; Markus Dittrich <markusle@gentoo.org>
  +files/pari-2.3.3-alglin.patch, pari-2.3.3.ebuild:
  Added enhancements to pari ebuild needed for future sage ebuild (see 
  bug #220521). Thanks much to Francois Bissey 
  <f.r.bissey@massey.ac.nz> for his patches.

  12 May 2008; Markus Rothe <corsair@gentoo.org> pari-2.3.2-r1.ebuild:
  Stable on ppc64

  07 May 2008; Markus Dittrich <markusle@gentoo.org>
  +files/pari-2.3.3-alglin.patch, pari-2.3.3.ebuild:
  Added additional bits eventually needed by sage (see bug #220521). Many
  thanks go to Francois Bissey <f.r.bissey@massey.ac.nz> for providing the
  necessary patches.

*pari-2.3.3 (04 May 2008)

  04 May 2008; Markus Dittrich <markusle@gentoo.org> -pari-2.1.5-r4.ebuild,
  -pari-2.1.7.ebuild, -pari-2.3.0.ebuild, +pari-2.3.3.ebuild:
  Version bump and cleanup.

  03 Apr 2008; Markus Dittrich <markusle@gentoo.org> pari-2.3.2-r1.ebuild:
  Made the ebuild mode generic for it to work on BSD also (see bug #214379).
  Thanks much to Henning Schild <henning@wh9.tu-dresden.de> for his patch.

  29 Feb 2008; Brent Baude <ranger@gentoo.org> pari-2.3.2-r1.ebuild:
  keyworded ~arch for ppc64, bug 211795

  01 Dec 2007; nixnut <nixnut@gentoo.org> pari-2.3.2-r1.ebuild:
  Stable on ppc wrt bug 194265

  26 Nov 2007; Markus Dittrich <markusle@gentoo.org>
  +files/pari-2.3.2-ppc-powerpc-arch-fix.patch, pari-2.3.2-r1.ebuild:
  Added patch to enable proper testing and install phase on ppc 
  (see bug #194265). Thanks much to <nixnut@gentoo.org> for his patch.

  16 Nov 2007; Markus Dittrich <markusle@gentoo.org> pari-2.1.5-r4.ebuild,
  pari-2.1.6.ebuild, pari-2.1.7.ebuild, pari-2.1.7-r1.ebuild,