@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/pari-2.3.3.ebuild,v 1.4 2008/05/14 17:13:39 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/pari-2.3.3.ebuild,v 1.5 2008/05/18 11:40:06 markusle Exp $
 
 EAPI="prefix"
 
@@ -17,7 +17,7 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~x86-macos"
 IUSE="doc emacs X elliptic galois gmp static"
 
-DEPEND="doc? ( virtual/tetex )
+DEPEND="doc? ( virtual/latex-base )
 		sys-libs/readline
 		X? ( x11-libs/libX11 )
 		emacs? ( virtual/emacs )
